add dlete offer function

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,15 @@
         <button id="callButton">Call</button>
         <button id="hangupButton">Hang Up</button>
     </div>
+    <div>
+        <ul id="offer-list">
+
+        </ul>
+    </div>
 
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-    <script defer src="main.js"></script>
     <script defer src="socket.js"></script>
+    <script defer src="main.js"></script>
 </body>
 
 </html>
